# ori

./: .gitignore  ARCHITECTURE.md  BUGS.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  EVOLUTION_LOG.md  GEMINI.md  Makefile  README.md  agent.json  check_pkg.py  check_sandbox.py  check_sandbox_tests.py  check_skills.py  debug_pytest.py  deploy.bat  deploy.sh  docker-compose.yml  find_string.py  git_check.py  identify_fail.py  inspect_a2a.py  inspect_a2a_routes.py  list_app_core.py  list_code.py  list_code_root.py  list_files.py  ls.py  ls_sandbox.py  pyproject.toml  rollback.bat  rollback.sh  run_bot.py  run_check_pkg.py  run_git_check.py  run_inspect.py  run_inspect_routes.py  run_list_files.py  run_ls.py  (+6 more)
app/: a2a_server.py  agent.py  scheduler_instance.py  secure_config.py  tasks.py  telegram_poller.py
app/app_utils/: __init__.py  config.py  schema_validator.py  telemetry.py  typing.py
app/callbacks/: guardrail_embeddings.json  guardrails.py
app/core/: agent_executor.py  auth.py  backup.py  health.py  memory.py  origins.py  transport.py
app/sub_agents/: coordinator_agent.py  developer_agent.py  knowledge_agent.py
app/templates/: setup.html
app/tools/: __init__.py  a2a.py  auth.py  evolution.py  google_search.py  health.py  integrations.py  memory.py  origins.py  preferences.py  research.py  scheduling.py  system.py  web.py
interfaces/: cli_chat.py  cli_run_agent.py  telegram_poller.py
scripts/: check_imports.py  find_faulty_tool.py  find_yaml.py  generate_guardrails.py  install.ps1  install.sh  list_files.py  migrate_split_db.py  run_pytest_full.py
skills/external-research-skill/: SKILL.md
skills/github-skill/: SKILL.md
skills/google-adk-a2a-skill/: SKILL.md
skills/google-adk-skill/: SKILL.md
skills/google-adk-skill/examples/: communication_channel.md  transport_adapter.md
skills/google-adk-skill/references/: adk-cheatsheet.md  headless-auth-patterns.md
skills/log-maintenance-skill/: SKILL.md
skills/skill-creator-skill/: SKILL.md
skills/system-management-skill/: SKILL.md
tests/: check_ports.py  conftest.py  inspect_event.py  test_auth_service.py  test_check_pkg.py  test_diag.py  test_dna_cleanup.py  test_event_persistence.py  test_evolution_hygiene.py  test_executor.py  test_file_structure.py  test_find_log.py  test_fix_sandbox.py  test_import_adk.py  test_installer.py  test_level_up.py  test_list_pkgs.py  test_ls.py  test_ls_scripts.py  test_pkgs_list.py  test_readme_joke.py  test_schema_validation.py  test_shell_syntax.py  test_signature.py  test_skill_creator_research.py  test_skills_frontmatter.py
